--- a/.github/workflows/build-aur-hello.yml
+++ b/.github/workflows/build-aur-hello.yml
@@ -6,6 +6,9 @@ on:
     branches: [ main ]
   pull_request:
 
+permissions:
+  contents: write
+
 jobs:
   build:
     name: Build on Arch Linux
@@ -57,5 +60,21 @@ jobs:
         with:
           name: aur-hello-packages
           path: _bin/*.pkg.tar.*
+
+      - name: Commit and push _bin artifacts back to repository
+        shell: bash
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          set -euxo pipefail
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add _bin
+          if git diff --cached --quiet; then
+            echo "No changes to commit."
+            exit 0
+          fi
+          git commit -m "Add built AUR hello package artifacts"
+          git push
 
 
