--- a/.github/workflows/build-aur-hello.yml
+++ b/.github/workflows/build-aur-hello.yml
@@ -71,7 +71,8 @@ jobs:
           git config --global --add safe.directory "$GITHUB_WORKSPACE"
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add -A "$GITHUB_WORKSPACE/_bin/"
+          cd "$GITHUB_WORKSPACE/_bin/"
+          git add .
           if git diff --cached --quiet; then
             echo "No changes to commit."
             exit 0
