--- a/.github/workflows/build-aur-hello.yml
+++ b/.github/workflows/build-aur-hello.yml
@@ -65,6 +65,9 @@ jobs:
         shell: bash
         run: |
           set -euxo pipefail
+          env
+          pwd
+          find
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add .
