--- a/.github/workflows/build-aur-hello.yml
+++ b/.github/workflows/build-aur-hello.yml
@@ -53,7 +53,8 @@ jobs:
         shell: bash
         run: |
           set -euxo pipefail
-          sudo --preserve-env=GITHUB_WORKSPACE -u builder bash -lc 'mkdir -p "$GITHUB_WORKSPACE/_bin" && cp -v ~/aur-hello/*.pkg.tar.* "$GITHUB_WORKSPACE/_bin/"'
+          # sudo --preserve-env=GITHUB_WORKSPACE -u builder bash -lc 'mkdir -p "$GITHUB_WORKSPACE/_bin" && cp -v ~/aur-hello/*.pkg.tar.* "$GITHUB_WORKSPACE/_bin/"'
+          sudo --preserve-env=GITHUB_WORKSPACE -u builder bash -lc 'mkdir -p "${{ github.workspace }}/_bin" && cp -v ~/aur-hello/*.pkg.tar.* "${{ github.workspace }}/_bin/"'
 
       - name: Upload built packages
         uses: actions/upload-artifact@v4
@@ -65,9 +66,9 @@ jobs:
         shell: bash
         run: |
           set -euxo pipefail
-          env
-          pwd
-          find
+          # env
+          # pwd
+          # find
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add .
