--- a/.github/workflows/build-aur-hello.yml
+++ b/.github/workflows/build-aur-hello.yml
@@ -18,6 +18,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        shell: bash
+        run: |
+          git log
 
       - name: Initialize pacman and install tooling
         shell: bash
