--- a/.github/workflows/build-aur-hello.yml
+++ b/.github/workflows/build-aur-hello.yml
@@ -35,7 +35,8 @@ jobs:
         working-directory: ${{ github.workspace }}
         run: |
           set -euxo pipefail
-          git config --global --add safe.directory /__w/aurb/aurb
+          git config --global --add safe.directory ${{ github.workspace }}
+          git config --global --add safe.directory $GITHUB_WORKSPACE
           git log --oneline -n 5 || { echo "No git history available"; exit 1; }
 
       # - name: Create non-root build user
