--- a/.github/workflows/b.yaml
+++ b/.github/workflows/b.yaml
@@ -8,6 +8,9 @@ on:
   schedule:
     - cron: "21 4 * * 0"
 
+permissions:
+  contents: write
+  
 jobs:
   build_repository:
     runs-on: ubuntu-latest
