--- a/.github/workflows/b.yaml
+++ b/.github/workflows/b.yaml
@@ -20,7 +20,8 @@ jobs:
       run: echo "::set-output name=date::$(date +'%Y-%m-%d %H:%M')"
 
     - name: Build Packages
-      uses: kopp/build-aur-packages@v1
+      # uses: kopp/build-aur-packages@v1
+      uses: vdun/build-aur-packages@master
       with:
         packages: >
           hello
