--- a/.github/workflows/b.yaml
+++ b/.github/workflows/b.yaml
@@ -25,6 +25,7 @@ jobs:
       with:
         packages: >
           hello
+          goose-desktop
 
     - name: List generated Files
       run: ls -1 > ${{ github.workspace }}/files.txt
