--- a/.github/workflows/b.yaml
+++ b/.github/workflows/b.yaml
@@ -25,7 +25,8 @@ jobs:
       with:
         packages: >
           hello
-          goose-desktop
+          pacman-static
+          # goose-desktop
         missing_pacman_dependencies: >
           protobuf
 
