Add 'nuclei' package to build workflow

--- a/.github/workflows/b.yaml
+++ b/.github/workflows/b.yaml
@@ -25,6 +25,7 @@ jobs:
       with:
         packages: >
           pacman-static
+          nuclei
         # missing_pacman_dependencies: >
           # hello
 
