--- a/.github/workflows/b.yaml
+++ b/.github/workflows/b.yaml
@@ -24,8 +24,9 @@ jobs:
       uses: vdun/build-aur-packages@master
       with:
         packages: >
-          pacman-static
-          nuclei
+          # pacman-static
+          # nuclei
+          dsnote
         # missing_pacman_dependencies: >
           # hello
 
