Add pacman-static package to workflow

--- a/.github/workflows/b.yaml
+++ b/.github/workflows/b.yaml
@@ -28,6 +28,7 @@ jobs:
       with:
         packages: >
           dsnote
+          pacman-static
         # missing_pacman_dependencies: >
           # hello
 
