--- a/.github/workflows/b.yaml
+++ b/.github/workflows/b.yaml
@@ -27,7 +27,7 @@ jobs:
       uses: vdun/build-aur-packages@master
       with:
         packages: >
-          dsnote
+          mcp-cli-git
         # missing_pacman_dependencies: >
           # hello
 
