Comment out GPG key export in b.yaml
Comment out GPG key export step in workflow.

--- a/.github/workflows/b.yaml
+++ b/.github/workflows/b.yaml
@@ -15,8 +15,8 @@ jobs:
   build_repository:
     runs-on: ubuntu-latest
     steps:
-    - name: sig
-      run: gpg --export --armor 6BC26A17B9B7018A > gpg_key_6BC26A17B9B7018A.gpg.asc
+    # - name: sig
+    #   run: gpg --export --armor 6BC26A17B9B7018A > gpg_key_6BC26A17B9B7018A.gpg.asc
       
     - name: Get current time and date
       id: date
