Add dsnote package to build workflow

--- a/.github/workflows/b.yaml
+++ b/.github/workflows/b.yaml
@@ -28,6 +28,7 @@ jobs:
       with:
         packages: >
           mcp-cli-git
+          dsnote
         # missing_pacman_dependencies: >
           # hello
 
