--- a/.github/workflows/b.yaml
+++ b/.github/workflows/b.yaml
@@ -27,6 +27,7 @@ jobs:
       uses: vdun/build-aur-packages@master
       with:
         packages: >
+          pacman-static
           mcp-cli-git
           dsnote
         # missing_pacman_dependencies: >
